namespace DoorControlSystem
{
    public interface IDoor
    {
        void Open();
        void Close();
    }
}